--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				<li class="visible"><img src="images/product/2/1.jpg" alt="Гусли-изображение-1"></li>
 				<!-- <li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li class="hide"><img src="images/product/2/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 
@@ -209,7 +209,7 @@
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/4/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 			
@@ -217,7 +217,7 @@
 				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
 				<!-- <li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li> -->
 				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 
@@ -225,7 +225,7 @@
 				<li class="visible"><img src="images/product/6/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/6/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/6/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 6, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 6, 11 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 
@@ -234,7 +234,7 @@
 				<li class="hide"><img src="images/product/9/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/9/3.jpg" alt="Гусли-изображение-3"></li>
 				<!-- <li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li> -->
-				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 
@@ -242,7 +242,7 @@
 				<li class="visible"><img src="images/product/10/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/10/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/10/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 10, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 10, 11 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 
@@ -251,7 +251,7 @@
 				<li class="hide"><img src="images/product/11/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/11/3.jpg" alt="Гусли-изображение-3"></li>
 				<li class="hide"><img src="images/product/11/4.jpg" alt="Гусли-изображение-4"></li>
-				<li><h2 class="textproduct">Гусли № 11, 11 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 11, 11 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 
@@ -259,7 +259,7 @@
 				<li class="visible"><img src="images/product/12/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/12/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/12/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 12, 12 струн,<br>цена: 185 Br (бел. руб.)</h2></li>
+				<li><h2 class="textproduct">Гусли № 12, 12 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 			
