--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
 				<img class="foto" src="images/myslides/29.jpg" alt="фото-гусли-29">
 				<div class="text"></div>
 			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/30.jpg" alt="фото-гусли-30">
+				<div class="text"></div>
+			</div>
+			<div class="mySlides fade">
+				<img class="foto" src="images/myslides/31.jpg" alt="фото-гусли-31">
+				<div class="text"></div>
+			</div>
 
 			<!-- Next and previous buttons -->
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -222,27 +230,11 @@
 
 
 			<ul class="images images1">
-				<li class="visible"><img src="images/product/6/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/6/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/6/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 6, 11 струн,<br>цена: 185 BYN (75 USD)</h2></li>
-			</ul>
-
-
-			<ul class="images images1">
 				<li class="visible"><img src="images/product/9/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/9/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/9/3.jpg" alt="Гусли-изображение-3"></li>
 				<!-- <li class="hide"><img src="images/product/9/4.jpg" alt="Гусли-изображение-4"></li> -->
 				<li><h2 class="textproduct">Гусли № 9, 12 струн,<br>цена: 185 BYN (75 USD)</h2></li>
-			</ul>
-
-
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/10/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/10/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/10/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 10, 11 струн,<br>цена: 185 BYN (75 USD)</h2></li>
 			</ul>
 
 
@@ -301,6 +293,11 @@
 					</a>
 				</h3>
 
+				<h3>
+					<a class="center" href="tel:+375297771453"><img src="images/tel.png" alt="телефон">
+						&nbsp; +375(29)777-14-53</a>
+				</h3>
+
 			</div>
 
 			<div class="comment">
@@ -320,13 +317,14 @@
 						<li class="hide"><img src="./images/review/7.jpg" alt="Гусли-отзыв-7"></li>
 						<li class="hide"><img src="./images/review/8.jpg" alt="Гусли-отзыв-8"></li>
 						<li class="hide"><img src="./images/review/9.jpg" alt="Гусли-отзыв-9"></li>
+						<li class="hide"><img src="./images/review/10.jpg" alt="Гусли-отзыв-10"></li>
 					</ul>
 
 				</div>
 			</div>
 		</div>
 
-		<div class="footer-date">Copyright © 2022</div>
+		<div class="footer-date">Copyright © 2023</div>
 
 	</footer>
 
