--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 	<meta name="yandex-verification" content="4ff80869fd518da7" />
 	<meta name="google-site-verification" content="jnsFx6nk18DhrgKxMlAOeiikxU6iXY-E2Ejbr3YdxCI" />
-	<!-- Yandex.Metrika counter -->
+
+ <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
 	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-	m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+	m[i].l=1*new Date();
+	for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+	k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
 	(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
  
 	ym(87816363, "init", {
 		 clickmap:true,
 		 trackLinks:true,
 		 accurateTrackBounce:true,
-		 webvisor:true
+		 webvisor:true,
+		 ecommerce:"dataLayer"
 	});
  </script>
  <noscript><div><img src="https://mc.yandex.ru/watch/87816363" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
