--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением старинного щипкового музыкального
 			инструмента- Гусли, в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
 			заглянуть в далекое прошлое. Мои гусли: это изделия ручной работы, экологичный материал, естественный
-			внешний вид, яркое, глубокое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
+			внешний вид, яркое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
 			доставки и оплаты согласовываются индивидуально.</p>
 		
 		<!-- Slideshow container -->
@@ -214,13 +214,30 @@
 
 
 			<ul class="images images1">
+				<li class="visible"><img src="images/product/1/1.jpg" alt="Гусли-изображение-1"></li>
+				<!-- <li class="hide"><img src="images/product/1/2.jpg" alt="Гусли-изображение-2"></li> -->
+				<li class="hide"><img src="images/product/1/3.jpg" alt="Гусли-изображение-3"></li>
+				<li><h2 class="textproduct">Гусли № 1, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
+			</ul>
+
+
+			<ul class="images images1">
 				<li class="visible"><img src="images/product/2/1.jpg" alt="Гусли-изображение-1"></li>
-				<!-- <li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li> -->
+				<li class="hide"><img src="images/product/2/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/2/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 2, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
 			</ul>
 
-
+			
+			<ul class="images images1">
+				<li class="visible"><img src="images/product/3/1.jpg" alt="Гусли-изображение-1"></li>
+				<li class="hide"><img src="images/product/3/2.jpg" alt="Гусли-изображение-2"></li>
+				<li class="hide"><img src="images/product/3/3.jpg" alt="Гусли-изображение-3"></li>
+				<li class="hide"><img src="images/product/3/4.jpg" alt="Гусли-изображение-4"></li>
+				<li><h2 class="textproduct">Гусли № 3, 11 струн,<br>цена: 280 BYN (100 USD)</h2></li>
+			</ul>
+			
+			
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/4/1.jpg" alt="Гусли-изображение-1"></li>
 				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
@@ -231,29 +248,14 @@
 			
 			<ul class="images images1">
 				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
-				<!-- <li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li> -->
+				<li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 5, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
+				<li class="hide"><img src="images/product/5/4.jpg" alt="Гусли-изображение-4"></li>
+				<li><h2 class="textproduct">Гусли небольшие походные № 5, 10 струн, цена: 140 BYN (50 USD)</h2></li>
 			</ul>
 
-
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/11/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/11/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/11/3.jpg" alt="Гусли-изображение-3"></li>
-				<li class="hide"><img src="images/product/11/4.jpg" alt="Гусли-изображение-4"></li>
-				<li><h2 class="textproduct">Гусли № 11, 11 струн,<br>цена: 280 BYN (100 USD)</h2></li>
-			</ul>
-
-
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/12/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/12/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/12/3.jpg" alt="Гусли-изображение-3"></li>
-				<li><h2 class="textproduct">Гусли № 12, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
-			</ul>
 		</div>
-
+		
 		<div class="video-block">
 			<h2 class="video-title">Гусли слушать, звучание гуслей</h2>
 			<video  controls preload="metadata"  controlsList="nodownload  nofullscreen ">
