--- a/index.html
+++ b/index.html
@@ -72,139 +72,10 @@
 		<!-- Slideshow container -->
 		<div id="myworks" class="slideshow-container">
 			<!-- Полноразмерные изображения с номером и текстом подписи -->
-			<div class="mySlides fade">
-				<!-- <div class="numbertext">1 </div>-->
-				<img class="foto" src="images/myslides/1.jpg" alt="фото-гусли-1">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/2.jpg" alt="фото-гусли-2">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/3.jpg" alt="фото-гусли-3">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/4.jpg" alt="фото-гусли-4">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/5.jpg" alt="фото-гусли-5">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/6.jpg" alt="фото-гусли-6">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/7.jpg" alt="фото-гусли-7">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/8.jpg" alt="фото-гусли-8">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/9.jpg" alt="фото-гусли-9">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/10.jpg" alt="фото-гусли-10">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/11.jpg" alt="фото-гусли-11">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/12.jpg" alt="фото-гусли-12">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/13.jpg" alt="фото-гусли-13">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/14.jpg" alt="фото-гусли-14">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/15.jpg" alt="фото-гусли-15">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/16.jpg" alt="фото-гусли-16">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/17.jpg" alt="фото-гусли-17">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/18.jpg" alt="фото-гусли-18">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/19.jpg" alt="фото-гусли-19">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/20.jpg" alt="фото-гусли-20">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/21.jpg" alt="фото-гусли-21">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/22.jpg" alt="фото-гусли-22">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/23.jpg" alt="фото-гусли-23">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/24.jpg" alt="фото-гусли-24">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/25.jpg" alt="фото-гусли-25">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/26.jpg" alt="фото-гусли-26">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/27.jpg" alt="фото-гусли-27">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/28.jpg" alt="фото-гусли-28">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/29.jpg" alt="фото-гусли-29">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/30.jpg" alt="фото-гусли-30">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/31.jpg" alt="фото-гусли-31">
-				<div class="text"></div>
-			</div>
-			<div class="mySlides fade">
-				<img class="foto" src="images/myslides/32.jpg" alt="фото-гусли-32">
-				<div class="text"></div>
-			</div>
 
 			<!-- Next and previous buttons -->
-			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-			<a class="next" onclick="plusSlides(1)">&#10095;</a>
+			<a class="prev" onclick="nextSlides(-1)">&#10094;</a>
+			<a class="next" onclick="nextSlides(1)">&#10095;</a>
 		</div>
 
 
@@ -243,15 +114,6 @@
 				<li class="hide"><img src="images/product/4/2.jpg" alt="Гусли-изображение-2"></li>
 				<li class="hide"><img src="images/product/4/3.jpg" alt="Гусли-изображение-3"></li>
 				<li><h2 class="textproduct">Гусли № 4, 12 струн,<br>цена: 280 BYN (100 USD)</h2></li>
-			</ul>
-
-			
-			<ul class="images images1">
-				<li class="visible"><img src="images/product/5/1.jpg" alt="Гусли-изображение-1"></li>
-				<li class="hide"><img src="images/product/5/2.jpg" alt="Гусли-изображение-2"></li>
-				<li class="hide"><img src="images/product/5/3.jpg" alt="Гусли-изображение-3"></li>
-				<li class="hide"><img src="images/product/5/4.jpg" alt="Гусли-изображение-4"></li>
-				<li><h2 class="textproduct">Гусли небольшие походные № 5, 10 струн, цена: 140 BYN (50 USD)</h2></li>
 			</ul>
 
 		</div>
