--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 		<p class="content">Приветствую! Меня зовут Евгений и я занимаюсь изготовлением старинного щипкового музыкального
 			инструмента- Гусли, в Беларуси. Это инструмент, позволяющий извлекать совершенно гармоничные сочетания звуков с возможностью
-			заглянуть в далекое прошлое. Мои гусли: это изделия ручной работы, экологичный материал, естественный
+			заглянуть в далекое прошлое. Мои гусли: это изделия ручной работы, естественный
 			внешний вид, яркое природное звучание. Пишите, звоните. Возможна отправка в другие страны. Условия
 			доставки и оплаты согласовываются индивидуально.</p>
 		
