--- a/index.html
+++ b/index.html
@@ -136,21 +136,6 @@
       <h2 id="textguslivnal">Гусли в наличии:</h2>
       <div id="available">
 
-        <ul class="images images1">
-          <li class="visible">
-            <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
-          </li>
-
-          <li>
-            <h3 class="textproduct">Гусли № 1, 11 струн.<br />цена: 400 BYN</h3>
-          </li>
-          <div class="hidden-photos">
-            <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
-            <img src="images/product/1/3.jpg" alt="Гусли-изображение-3" />
-            <img src="images/product/1/4.jpg" alt="Гусли-изображение-4" />
-            <img src="images/product/1/5.jpg" alt="Гусли-изображение-5" />
-          </div>
-        </ul>
 
         <ul class="images images1">
           <li class="visible">
@@ -158,7 +143,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 2, 11 струн.<br />цена: 400 BYN</h3>
+            <h3 class="textproduct">Гусли № 2, 11 струн.<br />цена: 300 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -173,12 +158,11 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br />цена: 400 BYN сейчас нет в наличии</h3>
+            <h3 class="textproduct">Гусли/Кантеле/Kantele № 6, 11 струн.<br />цена: 300 BYN </h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/6/2.jpg" alt="Гусли-изображение-2" />
             <img src="images/product/6/3.jpg" alt="Гусли-изображение-3" />
-            <img src="images/product/6/4.jpg" alt="Гусли-изображение-4" />
           </div>
         </ul>
 
@@ -188,7 +172,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли/Gesle № 7, 5 струн.<br />цена: 350 BYN</h3>
+            <h3 class="textproduct">Гусли/Gesle № 7, 5 струн.<br />цена: 300 BYN</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
@@ -197,20 +181,6 @@
           </div>
         </ul>
 
-        <ul class="images images1">
-          <li class="visible">
-            <img src="images/product/3/1.jpg" alt="Гусли-изображение-1" />
-          </li>
-
-          <li>
-            <h3 class="textproduct">Гусли № 3, 12 струн.<br />цена: 440 BYN</h3>
-          </li>
-
-          <div class="hidden-photos">
-            <img src="images/product/3/2.jpg" alt="Гусли-изображение-2" />
-            <img src="images/product/3/3.jpg" alt="Гусли-изображение-3" />
-          </div>
-        </ul>
 
         <ul class="images images1">
           <li class="visible">
@@ -218,28 +188,12 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 4, 12 струн.<br />440 BYN</h3>
+            <h3 class="textproduct">Гусли № 4, 12 струн.<br />350 BYN</h3>
           </li>
 
           <div class="hidden-photos">
             <img src="images/product/4/2.jpg" alt="Гусли-изображение-2" />
             <img src="images/product/4/3.jpg" alt="Гусли-изображение-3" />
-          </div>
-        </ul>
-
-        <ul class="images images1">
-          <li class="visible">
-            <img src="images/product/5/1.jpg" alt="Гусли-изображение-1" />
-          </li>
-
-          <li>
-            <h3 class="textproduct">Гусли № 5, 12 струн.<br />500 BYN </h3>
-          </li>
-
-          <div class="hidden-photos">
-            <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" />
-            <img src="images/product/5/3.jpg" alt="Гусли-изображение-3" />
-            <img src="images/product/5/4.jpg" alt="Гусли-изображение-3" />
           </div>
         </ul>
 
@@ -250,7 +204,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 8, 12 струн.<br />цена: 450 BYN</h3>
+            <h3 class="textproduct">Гусли № 8, 12 струн.<br />цена: 400 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -267,7 +221,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 9, 11 струн.<br />цена: 500 BYN</h3>
+            <h3 class="textproduct">Гусли № 9, 11 струн.<br />цена: 400 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -282,7 +236,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 10, 12 струн.<br />цена: 450 BYN</h3>
+            <h3 class="textproduct">Гусли № 10, 12 струн.<br />цена: 400 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -296,7 +250,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли № 12, 12 струн.<br />цена: 500 BYN</h3>
+            <h3 class="textproduct">Гусли № 12, 12 струн.<br />цена: 400 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -312,7 +266,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли шлемовидные № 11, 20 струн.<br />цена: 1200 BYN</h3>
+            <h3 class="textproduct">Гусли шлемовидные № 11, 20 струн.<br />цена: 1000 BYN</h3>
           </li>
 
           <div class="hidden-photos">
@@ -327,7 +281,7 @@
           </li>
 
           <li>
-            <h3 class="textproduct">Гусли шлемовидные № 15, 20 струн.<br />цена: 1200 BYN</h3>
+            <h3 class="textproduct">Гусли шлемовидные № 15, 20 струн.<br />цена: 1000 BYN</h3>
           </li>
 
           <div class="hidden-photos">
